--- a/EventSourcedTodoApp/appsettings.json
+++ b/EventSourcedTodoApp/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "EventStore": {
     "ConnectionString": "http://localhost:2113"
+  },
+  "AppSettings": {
+    "PostgresDsn": "Server=localhost;Port=5433;Database=TodoItems;Username=postgres;Password=;"
   }
 }
