refactor event projection

--- a/EventSourcedTodoApp/appsettings.json
+++ b/EventSourcedTodoApp/appsettings.json
@@ -6,10 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "EventStore": {
-    "ConnectionString": "http://localhost:2113"
-  },
-  "AppSettings": {
-    "PostgresDsn": "Server=localhost;Port=5433;Database=TodoItems;Username=postgres;Password=;"
+  "ConnectionStrings": {
+    "Esdb": "http://localhost:2113",
+    "Postgres": "Server=localhost;Port=5433;Database=TodoItems;Username=postgres;Password=;"
   }
 }
